[tool.poetry]
name = "libpuns"
version = "0.1.0"
description = "libPuns, Panda Universal Networking System, is a network wrapper for Python and Panda3D."
authors = ["Wizzerinus <multidragon@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
panda3d = "==1.10.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

